--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <p id="secondText">
     Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; Suspendisse interdum metus at metus iaculis, vitae dapibus eros rhoncus. Suspendisse tempus lectus erat, vitae malesuada sem tempus non. Ut suscipit eros ac interdum malesuada. In volutpat tellus in lacus malesuada, non finibus orci mattis. Phasellus vulputate dui arcu, non feugiat justo blandit ut. Etiam ut lacinia lorem, sit amet rhoncus ex. Nunc ornare sem a lorem venenatis tincidunt.
   </p>
-  <p id="thirdText" class="hide">
+  <p id="thirdText">
     Nunc maximus at purus id malesuada. Praesent congue dui vitae pellentesque eleifend. Nunc in ligula enim. Suspendisse nec tincidunt lacus, vitae vehicula magna. Nunc eu tempus enim. Nullam et rutrum quam, ut consectetur nunc. Duis tincidunt imperdiet velit, vel mattis tortor aliquam nec. Nulla ac vehicula elit. Mauris iaculis velit eu odio commodo viverra. Proin sit amet facilisis sapien. Aliquam volutpat placerat eros, eget pellentesque elit pretium ut. Maecenas lacinia ornare eros vitae lacinia. Etiam congue dapibus enim, sed fringilla sapien fringilla vitae.
   </p>
   <script src="assets/js/jquery-3.3.1.slim.min.js"></script>
